# moleculariq-benchmark

./: .gitignore  LICENSE  README.md  inspect_created_data.ipynb  pyproject.toml
A_create_dataset_pools/: 1_collect_pubchem_data.py  2_collect_external_test_set_molecules.py  3_standardize_pubchem_mols_and_remove_external_test_mols.py  4_create_train_test_pools.py  5_create_hard_test_pool_dataframe.py
A_create_dataset_pools/data/processed/: hard_test_pool_dataframe.pkl
A_create_dataset_pools/utils/: chemDFM_testset.py  chemIQ_testset.py  ether0_testset.py  llasmol_testset.py
B_create_benchmark/: A_compute_properties.py  generate_benchmark_dataset.py
B_create_benchmark/solver/: generate_test_molecules.py  solver.py  test_solver_simple.py  validate_solver_correct.py
data/dataset_pools/processed/: hard_test_pool_dataframe.pkl
natural_language/: __init__.py  mappings.py
notebooks/: overview_created_data.ipynb
rewards/: constraint_reward.py  index_reward.py  utils.py
src/a_dataset_pools/: 1_collect_pubchem_data.py  2_collect_external_test_set_molecules.py  3_standardize_pubchem_mols_and_remove_external_test_mols.py  4_create_train_test_pools.py  5_create_hard_test_pool_dataframe.py
src/a_dataset_pools/utils/: check_string_for_smiles.py  chemDFM_testset.py  chemIQ_testset.py  ether0_testset.py
src/b_benchmark/: 1_compute_properties.py  2_create_benchmark.py  compute_properties.py  generate_benchmark_dataset.py  task_names.py
src/b_benchmark/benchmark_generator/: __init__.py  config.py  lineage.py  main.py
src/b_benchmark/natural_language/: mappings.py
(+26 files in other folders)
